# fynqo-cracks-index

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
security/: strix-instructions.md
src/fynqo_cracks_index/: __init__.py  client.py
tests/: test_smoke.py
